Add new article section for Bitcoin and Islam
Added a new article section with details about Bitcoin in Islamic law.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,24 @@ a:hover{
 
 <div class="sommaire">
 
+<div class="section" id="nouvel-article">
+<h2>Nouvel article</h2>
+
+<div class="article" style="border-color:#6fa88a;">
+  <div class="article-date">21 novembre 2025</div>
+  <strong>
+    <a href="2026-01-30-Islam-et-bitcoin.html">
+      Bitcoin en droit islamique : licite ou interdit ?
+    </a>
+  </strong>
+  <p>
+    Analyse vulgarisée du statut de Bitcoin en droit islamique
+    à partir des principes classiques du fiqh des transactions.
+  </p>
+</div>
+
+</div>
+  
   <div class="article-item">
     <div class="article-date">21 novembre 2025</div>
     <a href="/2026-01-30-association-bitcoin.html">
