--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@ a:hover{
 <div class="section" id="nouvel-article">
 <h2>Nouvel article</h2>
 
-<div class="article" style="border-color:#6fa88a;">
-  <div class="article-date">21 novembre 2025</div>
+<div class="article" style="border:1px solid #5f8f7a; padding:12px; margin:16px 0; background:rgba(80,120,100,0.05);">
+  <div class="article-date" style="font-size:0.85em; color:#6f8578;">21 novembre 2025</div>
   <strong>
-    <a href="2026-01-30-Islam-et-bitcoin.html">
+    <a href="2026-01-30-Islam-et-bitcoin.html" style="color:#cfe3d1; text-decoration:none;">
       Bitcoin en droit islamique : licite ou interdit ?
     </a>
   </strong>
-  <p>
+  <p style="margin-top:6px;">
     Analyse vulgarisée du statut de Bitcoin en droit islamique
     à partir des principes classiques du fiqh des transactions.
   </p>
