Change paragraph color in index.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ a:hover{
       Bitcoin en droit islamique : licite ou interdit ?
     </a>
   </strong>
-  <p style="margin-top:6px;">
+  <p style="margin-top:6px; color:#9fb3a1;">
     Analyse vulgarisée du statut de Bitcoin en droit islamique
     à partir des principes classiques du fiqh des transactions.
   </p>
