--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@ a:hover{
 <div class="section" id="nouvel-article">
 <h2>Nouvel article</h2>
 
+<div class="section">
+<h2>Articles</h2>
+
+<!-- Article 2 : Bitcoin et Islam -->
 <div class="article" style="border:1px solid #5f8f7a; padding:12px; margin:16px 0; background:rgba(80,120,100,0.05);">
   <div class="article-date" style="font-size:0.85em; color:#6f8578;">21 novembre 2025</div>
   <strong>
@@ -133,14 +137,21 @@ a:hover{
   </p>
 </div>
 
-</div>
-  
-  <div class="article-item">
-    <div class="article-date">21 novembre 2025</div>
-    <a href="/2026-01-30-association-bitcoin.html">
+<!-- Article 1 : Association Bitcoin -->
+<div class="article" style="border:1px solid #5f8f7a; padding:12px; margin:16px 0; background:rgba(80,120,100,0.05);">
+  <div class="article-date" style="font-size:0.85em; color:#6f8578;">21 novembre 2025</div>
+  <strong>
+    <a href="2026-01-30-association-bitcoin.html" style="color:#cfe3d1; text-decoration:none;">
       Créer une association Bitcoin (loi 1901)
     </a>
-  </div>
+  </strong>
+  <p style="margin-top:6px; color:#9fb3a1;">
+    Cadre légal, objectifs et étapes clés pour structurer
+    un projet Bitcoin communautaire.
+  </p>
+</div>
+
+</div>
 
 </div>
 
