Refactor HTML structure and styles for articles
Updated HTML structure and styles for better readability and presentation. Adjusted sections to use a unified class for articles and improved margin and padding for layout consistency.

--- a/2026-01-30-Islam-et-bitcoin.html
+++ b/2026-01-30-Islam-et-bitcoin.html
@@ -14,39 +14,31 @@ body {
   line-height: 1.6;
 }
 
-h1, h2, h3 {
+h1, h2 {
   color: #cfe3d1;
-  margin-top: 1.6em;
-}
-
-h1 {
   text-align: center;
-  letter-spacing: 1px;
+  margin: 0.8em 0;
 }
 
-.date {
-  text-align: center;
-  color: #6f8578;
-  font-size: 0.9em;
-}
-
-.section {
-  border: 1px solid #2a3a32;
-  padding: 12px;
-  margin: 18px 0;
-}
-
-.highlight {
+.article {
   border: 1px solid #5f8f7a;
-  background: rgba(80,120,100,0.08);
+  padding: 12px;
+  margin: 16px 0;
+  background: rgba(80,120,100,0.05);
 }
 
-ul {
-  padding-left: 18px;
+.article-date {
+  font-size: 0.85em;
+  color: #6f8578;
 }
 
-li {
-  margin: 6px 0;
+.article a {
+  color: #cfe3d1;
+  text-decoration: none;
+}
+
+.article a:hover {
+  text-decoration: underline;
 }
 
 .footer {
@@ -74,9 +66,18 @@ li {
 <body id="top">
 
 <h1>Bitcoin en droit islamique<br>Licite ou interdit ?</h1>
-<div class="date">21 novembre 2025 — Bitcoin vu par Famas</div>
+<div class="article">
+  <div class="article-date">21 novembre 2025</div>
+  <strong>
+    <a href="#">Bitcoin en droit islamique : licite ou interdit ?</a>
+  </strong>
+  <p>
+    Analyse vulgarisée du statut de Bitcoin en droit islamique
+    à partir des principes classiques du fiqh des transactions.
+  </p>
+</div>
 
-<div class="section highlight">
+<div class="article">
 <h2>Introduction — Une vraie question juridique</h2>
 <p>
 Pour déterminer si Bitcoin est autorisé en islam, il faut appliquer
@@ -90,88 +91,76 @@ Sans cette qualification, aucune transaction ne peut être licite.
 </p>
 </div>
 
-<div class="section">
+<div class="article">
 <h2>1 — Qu’est-ce qu’un bien (<em>māl</em>) en islam ?</h2>
 <p>
-Un bien est :
-<strong>ce qui peut être possédé et dont l’utilité est reconnue par la société</strong>.
+Un bien est : <strong>ce qui peut être possédé et dont l’utilité est reconnue par la société</strong>.
 </p>
 <ul>
-  <li>Il peut être possédé (même immatériel)</li>
-  <li>Il a une utilité reconnue</li>
+<li>Il peut être possédé (même immatériel)</li>
+<li>Il a une utilité reconnue</li>
 </ul>
-
 <p>Les quatre écoles s’accordent sur un point fondamental :</p>
 <ul>
-  <li><strong>Hanafites</strong> : ce qui peut être contrôlé et utilisé est un bien</li>
-  <li><strong>Malikites</strong> : la coutume sociale (<em>ʿurf</em>) fait loi</li>
-  <li><strong>Shafiʿites</strong> : l’utilité prime sur la matière</li>
-  <li><strong>Hanbalites</strong> : tout ce qui a une valeur reconnue est un bien</li>
+<li><strong>Hanafites</strong> : ce qui peut être contrôlé et utilisé est un bien</li>
+<li><strong>Malikites</strong> : la coutume sociale (<em>ʿurf</em>) fait loi</li>
+<li><strong>Shafiʿites</strong> : l’utilité prime sur la matière</li>
+<li><strong>Hanbalites</strong> : tout ce qui a une valeur reconnue est un bien</li>
 </ul>
-
 <p><strong>Conclusion :</strong> l’immatériel peut être un bien licite.</p>
 </div>
 
-<div class="section">
+<div class="article">
 <h2>2 — Bitcoin remplit-il les critères du bien islamique ?</h2>
-
 <h3>① Possession et contrôle (<em>Iddikhār</em>)</h3>
 <p>
 Bitcoin se possède via une clé privée, équivalent numérique d’un titre de propriété.
 La blockchain garantit conservation et traçabilité.
 </p>
-
 <h3>② Valeur reconnue (<em>Tamawwul</em>)</h3>
 <p>
 Bitcoin est utilisé mondialement, échangé sur des marchés actifs
-et accepté par des particuliers comme des institutions.
+et accepté par des particuliers et des institutions.
 </p>
-
 <h3>③ Licéité intrinsèque (<em>Taqawwum</em>)</h3>
 <ul>
-  <li>Pas d’intérêt (<em>ribā</em>)</li>
-  <li>Pas de hasard imposé (<em>maysir</em>)</li>
-  <li>Pas d’activité illicite inhérente</li>
+<li>Pas d’intérêt (<em>ribā</em>)</li>
+<li>Pas de hasard imposé (<em>maysir</em>)</li>
+<li>Pas d’activité illicite inhérente</li>
 </ul>
-
 <p><strong>Conclusion :</strong> Bitcoin remplit les trois conditions du bien islamique.</p>
 </div>
 
-<div class="section">
+<div class="article">
 <h2>3 — Objections courantes</h2>
-
 <p><strong>« C’est immatériel »</strong><br>
 Les droits immatériels sont déjà reconnus (contrats, licences, droits d’auteur).
 </p>
-
 <p><strong>« C’est trop volatil »</strong><br>
 La volatilité est un risque de marché, pas un <em>gharar</em> trompeur.
 </p>
-
 <p><strong>« Ce n’est pas émis par un État »</strong><br>
 Historiquement, la monnaie est ce que les gens acceptent comme monnaie.
 </p>
-
 <p><strong>« C’est utilisé pour spéculer »</strong><br>
 Ce n’est pas l’actif qui est jugé, mais l’usage.
 </p>
 </div>
 
-<div class="section highlight">
+<div class="article">
 <h2>4 — Bitcoin et les objectifs de la charia</h2>
 <ul>
-  <li>Protection de la propriété (<em>ḥifẓ al-māl</em>)</li>
-  <li>Justice et transparence</li>
-  <li>Réduction de la dépendance au <em>ribā</em></li>
+<li>Protection de la propriété (<em>ḥifẓ al-māl</em>)</li>
+<li>Justice et transparence</li>
+<li>Réduction de la dépendance au <em>ribā</em></li>
 </ul>
-
 <p>
 Bitcoin protège la propriété, renforce la transparence
 et permet des échanges plus équitables.
 </p>
 </div>
 
-<div class="section">
+<div class="article">
 <h2>Conclusion finale</h2>
 <p>
 Bitcoin peut être considéré comme licite en droit islamique,
@@ -183,13 +172,13 @@ sans spéculation excessive ni activité interdite.
 </p>
 </div>
 
-<div class="section">
+<div class="article">
 <h2>Sources</h2>
 <ul>
-  <li>
-    <em>Bitcoin et les cryptomonnaies — une évaluation islamique</em><br>
-    Huzayfah Mangera (approuvé par Mufti A.-R. Mangera et Mufti Z. Patel)
-  </li>
+<li>
+<em>Bitcoin et les cryptomonnaies — une évaluation islamique</em><br>
+Huzayfah Mangera (approuvé par Mufti A.-R. Mangera et Mufti Z. Patel)
+</li>
 </ul>
 </div>
 
