Update HTML content and formatting for clarity

--- a/2026-01-30-Islam-et-bitcoin.html
+++ b/2026-01-30-Islam-et-bitcoin.html
@@ -66,12 +66,14 @@ h1, h2 {
 <body id="top">
 
 <h1>Bitcoin en droit islamique<br>Licite ou interdit ?</h1>
+
+<!-- Introduction -->
 <div class="article">
   <div class="article-date">21 novembre 2025</div>
   <strong>
     <a href="#">Bitcoin en droit islamique : licite ou interdit ?</a>
   </strong>
-  <p>
+  <p style="margin-top:6px; color:#9fb3a1;">
     Analyse vulgarisée du statut de Bitcoin en droit islamique
     à partir des principes classiques du fiqh des transactions.
   </p>
@@ -85,8 +87,7 @@ les règles classiques du <em>fiqh al-muʿāmalāt</em>
 (jurisprudence des transactions).
 </p>
 <p>
-La question centrale est simple :
-<strong>Bitcoin peut-il être considéré comme un bien possédable (<em>māl</em>) ?</strong>
+La question centrale : <strong>Bitcoin peut-il être considéré comme un bien possédable (<em>māl</em>) ?</strong>
 Sans cette qualification, aucune transaction ne peut être licite.
 </p>
 </div>
@@ -100,10 +101,10 @@ Un bien est : <strong>ce qui peut être possédé et dont l’utilité est recon
 <li>Il peut être possédé (même immatériel)</li>
 <li>Il a une utilité reconnue</li>
 </ul>
-<p>Les quatre écoles s’accordent sur un point fondamental :</p>
+<p>Les quatre écoles s’accordent :</p>
 <ul>
-<li><strong>Hanafites</strong> : ce qui peut être contrôlé et utilisé est un bien</li>
-<li><strong>Malikites</strong> : la coutume sociale (<em>ʿurf</em>) fait loi</li>
+<li><strong>Hanafites</strong> : contrôle + utilisation = bien</li>
+<li><strong>Malikites</strong> : la coutume sociale (<em>ʿurf</em>) décide</li>
 <li><strong>Shafiʿites</strong> : l’utilité prime sur la matière</li>
 <li><strong>Hanbalites</strong> : tout ce qui a une valeur reconnue est un bien</li>
 </ul>
@@ -172,13 +173,16 @@ sans spéculation excessive ni activité interdite.
 </p>
 </div>
 
+<!-- Sources avec lien cliquable -->
 <div class="article">
 <h2>Sources</h2>
 <ul>
-<li>
-<em>Bitcoin et les cryptomonnaies — une évaluation islamique</em><br>
-Huzayfah Mangera (approuvé par Mufti A.-R. Mangera et Mufti Z. Patel)
-</li>
+  <li>
+    <em>Bitcoin et les cryptomonnaies — une évaluation islamique</em><br>
+    Huzayfah Mangera (approuvé par Mufti A.-R. Mangera et Mufti Z. Patel)<br>
+    🔗 <a href="https://pdfhost.io/fr-FR/v/du8csk8S26_Bitcoin_et_les_cryptomonnaies_-_une_%C3%89valuation_islamique"
+          style="color:#cfe3d1; text-decoration:none;" target="_blank">Lire le PDF</a>
+  </li>
 </ul>
 </div>
 
