Revise title and enhance page layout
Updated the title and improved the styling of the page. Added new sections for Bitcoin tools, resources, and shops.

--- a/2026-02-01-boite-a-outils.html
+++ b/2026-02-01-boite-a-outils.html
@@ -3,210 +3,273 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Boîte à outils — Bitcoin vu par Famas</title>
+<title>Boîte à outils Bitcoin — Famas</title>
 
 <style>
-body{
-  margin:12px;
-  background:#000;
-  color:#9fb3a1;
-  font-family:"Courier New", Monaco, monospace;
-  line-height:1.6;
+body {
+  margin: 12px;
+  font-family: "Courier New", Monaco, monospace;
+  background: #000;
+  color: #9fb3a1;
+  line-height: 1.6;
 }
 
-h1, h2{
-  color:#cfe3d1;
-  text-align:center;
-  margin:0.8em 0;
+h1, h2 {
+  color: #cfe3d1;
+  text-align: center;
+  margin: 0.8em 0;
 }
 
-.article{
-  border:1px solid #5f8f7a;
-  padding:12px;
-  margin:16px 0;
-  background:rgba(80,120,100,0.05);
+/* Article important */
+.article-important {
+  border: 2px solid #39ff14; /* vert fluo lumineux */
+  box-shadow: 0 0 12px #39ff14;
+  padding: 16px;
+  margin: 16px 0;
+  background: rgba(124,252,0,0.08); /* fond légèrement vert fluo */
+  color: #baff9c; /* texte plus lumineux */
 }
 
-.article pre{
-  white-space:pre-wrap;
-  margin:0;
+.article-important a {
+  color: #baff9c;
+  text-decoration: underline;
 }
 
-.article a{
-  color:#cfe3d1;
-  text-decoration:none;
+ul {
+  padding-left: 18px;
 }
 
-.article a:hover{
-  text-decoration:underline;
+li {
+  margin: 8px 0;
 }
 
-.category{
-  margin-top:28px;
-  text-align:center;
-  color:#7CFC00;
-  font-weight:bold;
+.footer {
+  margin-top: 40px;
+  padding-top: 14px;
+  border-top: 1px solid #2a3a32;
+  text-align: center;
 }
 
-.footer{
-  margin-top:40px;
-  padding-top:14px;
-  border-top:1px solid #2a3a32;
-  text-align:center;
+.footer a {
+  display: inline-block;
+  margin: 6px 10px;
+  padding: 6px 10px;
+  text-decoration: none;
+  color: #cfe3d1;
+  border: 1px solid #3a5a4a;
 }
 
-.footer a{
-  display:inline-block;
-  margin:6px 10px;
-  padding:6px 10px;
-  text-decoration:none;
-  color:#cfe3d1;
-  border:1px solid #3a5a4a;
-}
-
-.footer a:hover{
-  background:rgba(100,160,130,0.15);
+.footer a:hover {
+  background: rgba(100,160,130,0.15);
 }
 </style>
 </head>
 
 <body id="top">
 
-<h1>⚙️ Boîte à outils</h1>
+<h1>🧰 Boîte à outils Bitcoin</h1>
+<p style="text-align:center; color:#baff9c;">Sélection d’outils Bitcoin, privacy, éducation et culture numérique</p>
 
-<p style="text-align:center;">
-Sélection d’outils utiles — Bitcoin, privacy, éducation, culture numérique.
-</p>
+<div class="article-important">
 
-<div class="article">
-<div class="article-date" style="font-size:0.85em;color:#6f8578;">
-Publié le 1 février 2026
+<ul>
+<li>🌐 <strong>NEWS & TECHNOLOGIE • Korben</strong><br>
+→ Blog francophone tech, hacking, open source, sécurité, vie privée<br>
+🔗 <a href="https://korben.info/" target="_blank">korben.info</a></li>
+
+<li>🗺️ <strong>BITCOIN • BTC Map</strong><br>
+→ Carte mondiale des commerces acceptant Bitcoin<br>
+🔗 <a href="https://btcmap.org/map" target="_blank">btcmap.org/map</a></li>
+
+<li>🎵 <strong>OUTILS • Lasagna Beats</strong><br>
+→ Beats et loops pour production musicale<br>
+🔗 <a href="https://beats.lasagna.pizza/" target="_blank">beats.lasagna.pizza</a></li>
+
+<li>🎵 <strong>AUDIO & MUSIQUE • Strudel</strong><br>
+→ Exploration et manipulation audio<br>
+🔗 <a href="https://strudel.cc/#JDogcygiW2JkIDxoaCBvaD5dKjIiKS5iYW5rKCJ0cjkwOSIpLmRlYyguNCk%3D" target="_blank">strudel.cc</a></li>
+
+<li>🎵 <strong>OUTILS • LoopMaster</strong><br>
+→ Création et édition de boucles audio<br>
+🔗 <a href="https://loopmaster.xyz/" target="_blank">loopmaster.xyz</a></li>
+
+<li>🎬 <strong>CULTURE & ÉDUCATION • WikiFlix</strong><br>
+→ Streaming films domaine public<br>
+🔗 <a href="https://wikiflix.toolforge.org/#/" target="_blank">wikiflix.toolforge.org</a></li>
+
+<li>🛠️ <strong>OUTILS • MathAcademy Cyan</strong><br>
+→ Plateforme éducative interactive mathématiques<br>
+🔗 <a href="https://mathacademy-cyan.vercel.app/" target="_blank">mathacademy-cyan.vercel.app</a></li>
+
+<li>🌌 <strong>SCIENCE & ESPACE • Astronomy Picture of the Day (APOD)</strong><br>
+→ Image astronomique quotidienne, archives NASA<br>
+🔗 <a href="https://apod.nasa.gov/apod/astropix.html" target="_blank">apod.nasa.gov</a></li>
+
+<li>🌐 <strong>ÉDUCATION & ANALYSE • Politiscales</strong><br>
+→ Outil d’analyse politique interactif<br>
+🔗 <a href="https://politiscales.fr/" target="_blank">politiscales.fr</a></li>
+
+<li>🌐 <strong>ÉDUCATION & GÉOGRAPHIE • TerraGuessr</strong><br>
+→ Globe 3D interactif sur inégalités mondiales<br>
+🔗 <a href="https://terraguessr.org/" target="_blank">terraguessr.org</a></li>
+
+<li>✉️ <strong>MESSAGERIE & EMAIL • Temp‑Mail</strong><br>
+→ Email temporaire et anonyme<br>
+🔗 <a href="https://temp-mail.org" target="_blank">temp-mail.org</a></li>
+
+<li>✉️ <strong>MESSAGERIE & EMAIL • Proton Mail</strong><br>
+→ Chiffrement de bout en bout<br>
+🔗 <a href="https://proton.me" target="_blank">proton.me</a></li>
+
+<li>✉️ <strong>MESSAGERIE & EMAIL • Proton Authenticator</strong><br>
+→ Authentification à deux facteurs<br>
+🔗 <a href="https://proton.me/authenticator" target="_blank">proton.me/authenticator</a></li>
+
+<li>✉️ <strong>MESSAGERIE & EMAIL • Proton Drive</strong><br>
+→ Stockage chiffré de bout en bout<br>
+🔗 <a href="https://proton.me/drive" target="_blank">proton.me/drive</a></li>
+
+<li>✉️ <strong>MESSAGERIE & EMAIL • Chitchatter</strong><br>
+→ Messagerie P2P sécurisée open source<br>
+🔗 <a href="https://chitchatter.im/" target="_blank">chitchatter.im</a></li>
+
+<li>🔒 <strong>PRIVACY & SÉCURITÉ • Privacy Guides</strong><br>
+→ Recommandations privacy-first<br>
+🔗 <a href="https://privacyguides.org" target="_blank">privacyguides.org</a></li>
+
+<li>🔒 <strong>PRIVACY & SÉCURITÉ • OnlinePrivacy.io — Privacy 101</strong><br>
+→ Formation gratuite confidentialité<br>
+🔗 <a href="https://onlineprivacy.io" target="_blank">onlineprivacy.io</a></li>
+
+<li>🔒 <strong>PRIVACY & SÉCURITÉ • National Cybersecurity Alliance</strong><br>
+→ Ressources cybersécurité grand public<br>
+🔗 <a href="https://staysafeonline.org" target="_blank">staysafeonline.org</a></li>
+
+<li>🔒 <strong>PRIVACY & SÉCURITÉ • PrivacyTools.io</strong><br>
+→ Guide privacy-first<br>
+🔗 <a href="https://www.privacytools.io" target="_blank">privacytools.io</a></li>
+
+<li>🔒 <strong>PRIVACY & SÉCURITÉ • OrigamiVault</strong><br>
+→ Chiffrement pour sauvegarde papier<br>
+🔗 <a href="https://origamivault.com" target="_blank">origamivault.com</a></li>
+
+<li>🔒 <strong>PRIVACY & SÉCURITÉ • Have I Been Pwned</strong><br>
+→ Vérification fuites emails<br>
+🔗 <a href="https://haveibeenpwned.com" target="_blank">haveibeenpwned.com</a></li>
+
+<li>🔒 <strong>PRIVACY & SÉCURITÉ • CyberSécurité — Orange</strong><br>
+→ Guides phishing et arnaques<br>
+🔗 <a href="https://cybersecurite.orange.fr" target="_blank">cybersecurite.orange.fr</a></li>
+
+<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Proton Wallet</strong><br>
+→ Wallet intégré Proton, simple pour débutants<br>
+🔗 <a href="https://proton.me/wallet" target="_blank">proton.me/wallet</a></li>
+
+<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Blitz Wallet</strong><br>
+→ Wallet non-custodial Lightning<br>
+🔗 <a href="https://blitzwalletapp.com/u/Komainu" target="_blank">blitzwalletapp.com</a></li>
+
+<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Bull Wallet / Bull Bitcoin</strong><br>
+→ Wallet non-custodial + Lightning<br>
+🔗 <a href="https://app.bullbitcoin.com/registration/famas" target="_blank">bullbitcoin.com</a></li>
+
+<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Peach Bitcoin</strong><br>
+→ Achat/vente P2P sans KYC<br>
+🔗 <a href="https://peachbitcoin.com/fr/referral?code=PR5CE3" target="_blank">peachbitcoin.com</a></li>
+
+<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • P2P.Band</strong><br>
+→ Agrégateur P2P Bitcoin<br>
+🔗 <a href="https://p2p.band" target="_blank">p2p.band</a></li>
+
+<li>💰 <strong>WALLETS & CARTES • WalletWallet</strong><br>
+→ Gestion cartes fidélité Apple Wallet<br>
+🔗 <a href="https://walletwallet.alen.ro/" target="_blank">walletwallet.alen.ro</a></li>
+
+<li>🌍 <strong>RÉSEAUX SOCIAUX BITCOIN • Club Orange</strong><br>
+→ Réseau social Bitcoiners<br>
+🔗 <a href="https://signup.cluborange.org/co/famas" target="_blank">signup.cluborange.org</a></li>
+
+<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • Nostr</strong><br>
+→ Protocole ouvert décentralisé<br>
+🔗 <a href="https://nostr.fr/" target="_blank">nostr.fr</a></li>
+
+<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • NostrZap</strong><br>
+→ Interface Nostr<br>
+🔗 <a href="https://www.nostrzap.com/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">nostrzap.com</a></li>
+
+<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • ProfileStr</strong><br>
+→ Gestion identité Nostr<br>
+🔗 <a href="https://profilestr.com/profile/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">profilestr.com</a></li>
+
+<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • Flare</strong><br>
+→ Agrégateur Nostr, Mastodon, Bluesky<br>
+🔗 <a href="https://flareapp.moe/" target="_blank">flareapp.moe</a></li>
+
+<li>📚 <strong>RÉPERTOIRES BITCOIN • BTC Directory</strong><br>
+→ Annuaire Bitcoin FR & internat<br>
+🔗 <a href="https://btcdir.org/" target="_blank">btcdir.org</a></li>
+
+<li>📚 <strong>RÉPERTOIRES BITCOIN • Bitzy</strong><br>
+→ Annuaire Bitcoin & crypto<br>
+🔗 <a href="https://www.bitzy.com/" target="_blank">bitzy.com</a></li>
+
+<li>📚 <strong>RÉPERTOIRES BITCOIN • KYCnot.me</strong><br>
+→ Services crypto sans KYC<br>
+🔗 <a href="https://kycnot.me/" target="_blank">kycnot.me</a></li>
+
+<li>🛠️ <strong>OUTILS • Loot Drop</strong><br>
+→ Cimetière de projets abandonnés<br>
+🔗 <a href="https://www.loot-drop.io/" target="_blank">loot-drop.io</a></li>
+
+<li>🛠️ <strong>OUTILS • Textarea</strong><br>
+→ Éditeur texte léger et rapide<br>
+🔗 <a href="https://textarea.my/#VY9NTgMxDIX3PcVjA" target="_blank">textarea.my</a></li>
+
+<li>🛠️ <strong>OUTILS • Untype</strong><br>
+→ Créer/éditer contenu sans code<br>
+🔗 <a href="https://untype.app/" target="_blank">untype.app</a></li>
+
+<li>🛠️ <strong>OUTILS • Futurepedia</strong><br>
+→ Répertoire outils IA<br>
+🔗 <a href="https://future-pedia.com/fr/" target="_blank">future-pedia.com</a></li>
+
+<li>🛠️ <strong>OUTILS • Neocities</strong><br>
+→ Hébergement sites web<br>
+🔗 <a href="https://neocities.org/" target="_blank">neocities.org</a></li>
+
+<li>📊 <strong>OUTILS • Mempool.space</strong><br>
+→ Explorateur Bitcoin<br>
+🔗 <a href="https://mempool.space/fr/" target="_blank">mempool.space</a></li>
+
+<li>💰 <strong>BOUTIQUES BITCOIN • B Market 21</strong><br>
+→ Boutique en ligne Bitcoin-friendly<br>
+🔗 <a href="https://bmarket21.com/" target="_blank">bmarket21.com</a></li>
+
+<li>💰 <strong>BOUTIQUES BITCOIN • Sulina Derm</strong><br>
+→ Soins naturels, paiement Bitcoin<br>
+🔗 <a href="https://sulinaderm.com/" target="_blank">sulinaderm.com</a></li>
+
+<li>💰 <strong>BOUTIQUES BITCOIN • Drink Bob</strong><br>
+→ Boissons et accessoires Bitcoin<br>
+🔗 <a href="https://drink-bob.com/" target="_blank">drink-bob.com</a></li>
+
+<li>💰 <strong>BOUTIQUES BITCOIN • BitcoinStore</strong><br>
+→ Matériel, livres, accessoires Bitcoin<br>
+🔗 <a href="https://bitcoinstore.fr/" target="_blank">bitcoinstore.fr</a></li>
+
+<li>💰 <strong>BOUTIQUES BITCOIN • BitcoinBook</strong><br>
+→ Boutique en ligne Bitcoin<br>
+🔗 <a href="https://bitcoinbook.shop/collections/french" target="_blank">bitcoinbook.shop</a></li>
+
+<li>💰 <strong>BOUTIQUES BITCOIN • Bitcoin Bazar</strong><br>
+→ Boutique physique et en ligne Bitcoin<br>
+🔗 <a href="https://bitcoinbazar.fr/" target="_blank">bitcoinbazar.fr</a></li>
+</ul>
+
 </div>
-</div>
-
-<!-- 🌐 NEWS & TECHNO -->
-<div class="category">🌐 NEWS & TECHNOLOGIE</div>
-<div class="article"><pre>
-Korben
-→ Blog tech francophone, sécurité, hacking
-Source :
-<a href="https://korben.info/" target="_blank">https://korben.info/</a>
-</pre></div>
-
-<!-- 🗺️ BITCOIN -->
-<div class="category">🗺️ BITCOIN</div>
-<div class="article"><pre>
-BTC Map
-→ Carte mondiale des commerces Bitcoin
-Source :
-<a href="https://btcmap.org/map" target="_blank">https://btcmap.org/map</a>
-</pre></div>
-
-<!-- 🎵 AUDIO -->
-<div class="category">🎵 AUDIO & MUSIQUE</div>
-<div class="article"><pre>
-Lasagna Beats
-→ Beats & loops créatifs
-Source :
-<a href="https://beats.lasagna.pizza/" target="_blank">https://beats.lasagna.pizza/</a>
-</pre></div>
-
-<div class="article"><pre>
-Strudel
-→ Expérimentations sonores
-Source :
-<a href="https://strudel.cc/" target="_blank">https://strudel.cc/</a>
-</pre></div>
-
-<!-- 🎬 CULTURE -->
-<div class="category">🎬 CULTURE & ÉDUCATION</div>
-<div class="article"><pre>
-WikiFlix
-→ Films du domaine public
-Source :
-<a href="https://wikiflix.toolforge.org/#/" target="_blank">
-https://wikiflix.toolforge.org/
-</a>
-</pre></div>
-
-<!-- 🌌 SCIENCE -->
-<div class="category">🌌 SCIENCE</div>
-<div class="article"><pre>
-Astronomy Picture of the Day (NASA)
-→ Image astronomique quotidienne
-Source :
-<a href="https://apod.nasa.gov/apod/astropix.html" target="_blank">
-https://apod.nasa.gov/apod/astropix.html
-</a>
-</pre></div>
-
-<!-- 🔒 PRIVACY -->
-<div class="category">🔒 PRIVACY & SÉCURITÉ</div>
-<div class="article"><pre>
-Privacy Guides
-→ Guides privacy-first
-Source :
-<a href="https://privacyguides.org" target="_blank">https://privacyguides.org</a>
-</pre></div>
-
-<div class="article"><pre>
-Have I Been Pwned
-→ Vérification fuites de données
-Source :
-<a href="https://haveibeenpwned.com" target="_blank">
-https://haveibeenpwned.com
-</a>
-</pre></div>
-
-<!-- 💰 WALLETS -->
-<div class="category">💰 WALLETS BITCOIN</div>
-<div class="article"><pre>
-Peach Bitcoin
-→ Achat / vente P2P sans KYC
-Source :
-<a href="https://peachbitcoin.com/" target="_blank">
-https://peachbitcoin.com/
-</a>
-</pre></div>
-
-<div class="article"><pre>
-Proton Wallet
-→ Envoi BTC par email
-Source :
-<a href="https://proton.me/wallet" target="_blank">
-https://proton.me/wallet
-</a>
-</pre></div>
-
-<!-- 🌐 NOSTR -->
-<div class="category">🌐 RÉSEAUX DÉCENTRALISÉS</div>
-<div class="article"><pre>
-Nostr
-→ Protocole social décentralisé
-Source :
-<a href="https://nostr.fr/" target="_blank">https://nostr.fr/</a>
-</pre></div>
-
-<!-- 🛠️ OUTILS -->
-<div class="category">🛠️ OUTILS</div>
-<div class="article"><pre>
-Textarea
-→ Éditeur texte minimaliste
-Source :
-<a href="https://textarea.my/" target="_blank">https://textarea.my/</a>
-</pre></div>
-
-<div class="article"><pre>
-itoa.hex.dance
-→ Convertisseur ASCII / hex
-Source :
-<a href="https://itoa.hex.dance/" target="_blank">
-https://itoa.hex.dance/
-</a>
-</pre></div>
 
 <div class="footer">
-  <a href="#top">↑ Haut de page</a>
+  <a href="#top">↑ Haut de page</a> ·
   <a href="index.html">Accueil</a>
 </div>
 
