--- a/2026-02-01-boite-a-outils.html
+++ b/2026-02-01-boite-a-outils.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Boîte à outils Bitcoin — Famas</title>
-
 <style>
 body {
   margin: 12px;
@@ -64,206 +63,154 @@ li {
 }
 </style>
 </head>
-
 <body id="top">
 
 <h1>🧰 Boîte à outils Bitcoin</h1>
-<p style="text-align:center; color:#baff9c;">Sélection d’outils Bitcoin, privacy, éducation et culture numérique</p>
+<p style="text-align:center; color:#baff9c;">Sélection complète de 75 outils Bitcoin, privacy, éducation et culture numérique</p>
 
 <div class="article-important">
 
+<!-- Section Privacy & Sécurité -->
+<h2>🔒 Privacy & Sécurité</h2>
 <ul>
-<li>🌐 <strong>NEWS & TECHNOLOGIE • Korben</strong><br>
-→ Blog francophone tech, hacking, open source, sécurité, vie privée<br>
-🔗 <a href="https://korben.info/" target="_blank">korben.info</a></li>
-
-<li>🗺️ <strong>BITCOIN • BTC Map</strong><br>
-→ Carte mondiale des commerces acceptant Bitcoin<br>
-🔗 <a href="https://btcmap.org/map" target="_blank">btcmap.org/map</a></li>
-
-<li>🎵 <strong>OUTILS • Lasagna Beats</strong><br>
-→ Beats et loops pour production musicale<br>
-🔗 <a href="https://beats.lasagna.pizza/" target="_blank">beats.lasagna.pizza</a></li>
-
-<li>🎵 <strong>AUDIO & MUSIQUE • Strudel</strong><br>
-→ Exploration et manipulation audio<br>
-🔗 <a href="https://strudel.cc/#JDogcygiW2JkIDxoaCBvaD5dKjIiKS5iYW5rKCJ0cjkwOSIpLmRlYyguNCk%3D" target="_blank">strudel.cc</a></li>
-
-<li>🎵 <strong>OUTILS • LoopMaster</strong><br>
-→ Création et édition de boucles audio<br>
-🔗 <a href="https://loopmaster.xyz/" target="_blank">loopmaster.xyz</a></li>
-
-<li>🎬 <strong>CULTURE & ÉDUCATION • WikiFlix</strong><br>
-→ Streaming films domaine public<br>
-🔗 <a href="https://wikiflix.toolforge.org/#/" target="_blank">wikiflix.toolforge.org</a></li>
-
-<li>🛠️ <strong>OUTILS • MathAcademy Cyan</strong><br>
-→ Plateforme éducative interactive mathématiques<br>
-🔗 <a href="https://mathacademy-cyan.vercel.app/" target="_blank">mathacademy-cyan.vercel.app</a></li>
-
-<li>🌌 <strong>SCIENCE & ESPACE • Astronomy Picture of the Day (APOD)</strong><br>
-→ Image astronomique quotidienne, archives NASA<br>
-🔗 <a href="https://apod.nasa.gov/apod/astropix.html" target="_blank">apod.nasa.gov</a></li>
-
-<li>🌐 <strong>ÉDUCATION & ANALYSE • Politiscales</strong><br>
-→ Outil d’analyse politique interactif<br>
-🔗 <a href="https://politiscales.fr/" target="_blank">politiscales.fr</a></li>
-
-<li>🌐 <strong>ÉDUCATION & GÉOGRAPHIE • TerraGuessr</strong><br>
-→ Globe 3D interactif sur inégalités mondiales<br>
-🔗 <a href="https://terraguessr.org/" target="_blank">terraguessr.org</a></li>
-
-<li>✉️ <strong>MESSAGERIE & EMAIL • Temp‑Mail</strong><br>
-→ Email temporaire et anonyme<br>
-🔗 <a href="https://temp-mail.org" target="_blank">temp-mail.org</a></li>
-
-<li>✉️ <strong>MESSAGERIE & EMAIL • Proton Mail</strong><br>
-→ Chiffrement de bout en bout<br>
-🔗 <a href="https://proton.me" target="_blank">proton.me</a></li>
-
-<li>✉️ <strong>MESSAGERIE & EMAIL • Proton Authenticator</strong><br>
-→ Authentification à deux facteurs<br>
-🔗 <a href="https://proton.me/authenticator" target="_blank">proton.me/authenticator</a></li>
-
-<li>✉️ <strong>MESSAGERIE & EMAIL • Proton Drive</strong><br>
-→ Stockage chiffré de bout en bout<br>
-🔗 <a href="https://proton.me/drive" target="_blank">proton.me/drive</a></li>
-
-<li>✉️ <strong>MESSAGERIE & EMAIL • Chitchatter</strong><br>
-→ Messagerie P2P sécurisée open source<br>
-🔗 <a href="https://chitchatter.im/" target="_blank">chitchatter.im</a></li>
-
-<li>🔒 <strong>PRIVACY & SÉCURITÉ • Privacy Guides</strong><br>
-→ Recommandations privacy-first<br>
+<li>🔒 Privacy Guides → Recommandations privacy-first<br>
 🔗 <a href="https://privacyguides.org" target="_blank">privacyguides.org</a></li>
-
-<li>🔒 <strong>PRIVACY & SÉCURITÉ • OnlinePrivacy.io — Privacy 101</strong><br>
-→ Formation gratuite confidentialité<br>
+<li>🔒 OnlinePrivacy.io — Privacy 101 → Formation gratuite confidentialité<br>
 🔗 <a href="https://onlineprivacy.io" target="_blank">onlineprivacy.io</a></li>
-
-<li>🔒 <strong>PRIVACY & SÉCURITÉ • National Cybersecurity Alliance</strong><br>
-→ Ressources cybersécurité grand public<br>
+<li>🔒 National Cybersecurity Alliance → Guides phishing & cybersécurité<br>
 🔗 <a href="https://staysafeonline.org" target="_blank">staysafeonline.org</a></li>
-
-<li>🔒 <strong>PRIVACY & SÉCURITÉ • PrivacyTools.io</strong><br>
-→ Guide privacy-first<br>
+<li>🔒 PrivacyTools.io → Guide privacy-first, alternatives sécurisées<br>
 🔗 <a href="https://www.privacytools.io" target="_blank">privacytools.io</a></li>
-
-<li>🔒 <strong>PRIVACY & SÉCURITÉ • OrigamiVault</strong><br>
-→ Chiffrement pour sauvegarde papier<br>
+<li>🔒 OrigamiVault → Chiffrement pour sauvegarde papier<br>
 🔗 <a href="https://origamivault.com" target="_blank">origamivault.com</a></li>
-
-<li>🔒 <strong>PRIVACY & SÉCURITÉ • Have I Been Pwned</strong><br>
-→ Vérification fuites emails<br>
+<li>🔒 Have I Been Pwned → Vérification fuites emails<br>
 🔗 <a href="https://haveibeenpwned.com" target="_blank">haveibeenpwned.com</a></li>
-
-<li>🔒 <strong>PRIVACY & SÉCURITÉ • CyberSécurité — Orange</strong><br>
-→ Guides phishing et arnaques<br>
+<li>🔒 CyberSécurité — Orange → Sensibilisation phishing & arnaques<br>
 🔗 <a href="https://cybersecurite.orange.fr" target="_blank">cybersecurite.orange.fr</a></li>
+<li>🔒 Fuites d’infos → Comprendre les fuites de données<br>
+🔗 <a href="https://christopheboutry.com/fuites-infos/" target="_blank">christopheboutry.com/fuites-infos</a></li>
+</ul>
 
-<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Proton Wallet</strong><br>
-→ Wallet intégré Proton, simple pour débutants<br>
+<!-- Section Wallets & Paiements Bitcoin -->
+<h2>💰 Wallets & Paiements Bitcoin</h2>
+<ul>
+<li>💰 Proton Wallet → Wallet intégré Proton, simple pour débutants<br>
 🔗 <a href="https://proton.me/wallet" target="_blank">proton.me/wallet</a></li>
-
-<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Blitz Wallet</strong><br>
-→ Wallet non-custodial Lightning<br>
+<li>💰 Blitz Wallet → Wallet non-custodial Lightning<br>
 🔗 <a href="https://blitzwalletapp.com/u/Komainu" target="_blank">blitzwalletapp.com</a></li>
-
-<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Bull Wallet / Bull Bitcoin</strong><br>
-→ Wallet non-custodial + Lightning<br>
+<li>💰 Bull Wallet / Bull Bitcoin → Non-custodial + Lightning<br>
 🔗 <a href="https://app.bullbitcoin.com/registration/famas" target="_blank">bullbitcoin.com</a></li>
-
-<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • Peach Bitcoin</strong><br>
-→ Achat/vente P2P sans KYC<br>
+<li>💰 Peach Bitcoin → Achat/vente P2P sans KYC<br>
 🔗 <a href="https://peachbitcoin.com/fr/referral?code=PR5CE3" target="_blank">peachbitcoin.com</a></li>
-
-<li>💰 <strong>WALLETS & PAIEMENTS BITCOIN • P2P.Band</strong><br>
-→ Agrégateur P2P Bitcoin<br>
+<li>💰 P2P.Band → Agrégateur P2P Bitcoin<br>
 🔗 <a href="https://p2p.band" target="_blank">p2p.band</a></li>
-
-<li>💰 <strong>WALLETS & CARTES • WalletWallet</strong><br>
-→ Gestion cartes fidélité Apple Wallet<br>
+<li>💰 WalletWallet → Gestion cartes fidélité Apple Wallet<br>
 🔗 <a href="https://walletwallet.alen.ro/" target="_blank">walletwallet.alen.ro</a></li>
+<li>💱 Krux → Signature Bitcoin open source, PSBT & multisig<br>
+🔗 <a href="https://selfcustody.github.io/krux/" target="_blank">selfcustody.github.io/krux/</a></li>
+</ul>
 
-<li>🌍 <strong>RÉSEAUX SOCIAUX BITCOIN • Club Orange</strong><br>
-→ Réseau social Bitcoiners<br>
-🔗 <a href="https://signup.cluborange.org/co/famas" target="_blank">signup.cluborange.org</a></li>
-
-<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • Nostr</strong><br>
-→ Protocole ouvert décentralisé<br>
-🔗 <a href="https://nostr.fr/" target="_blank">nostr.fr</a></li>
-
-<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • NostrZap</strong><br>
-→ Interface Nostr<br>
-🔗 <a href="https://www.nostrzap.com/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">nostrzap.com</a></li>
-
-<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • ProfileStr</strong><br>
-→ Gestion identité Nostr<br>
-🔗 <a href="https://profilestr.com/profile/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">profilestr.com</a></li>
-
-<li>🌐 <strong>RÉSEAUX DÉCENTRALISÉS • Flare</strong><br>
-→ Agrégateur Nostr, Mastodon, Bluesky<br>
-🔗 <a href="https://flareapp.moe/" target="_blank">flareapp.moe</a></li>
-
-<li>📚 <strong>RÉPERTOIRES BITCOIN • BTC Directory</strong><br>
-→ Annuaire Bitcoin FR & internat<br>
-🔗 <a href="https://btcdir.org/" target="_blank">btcdir.org</a></li>
-
-<li>📚 <strong>RÉPERTOIRES BITCOIN • Bitzy</strong><br>
-→ Annuaire Bitcoin & crypto<br>
-🔗 <a href="https://www.bitzy.com/" target="_blank">bitzy.com</a></li>
-
-<li>📚 <strong>RÉPERTOIRES BITCOIN • KYCnot.me</strong><br>
-→ Services crypto sans KYC<br>
-🔗 <a href="https://kycnot.me/" target="_blank">kycnot.me</a></li>
-
-<li>🛠️ <strong>OUTILS • Loot Drop</strong><br>
-→ Cimetière de projets abandonnés<br>
-🔗 <a href="https://www.loot-drop.io/" target="_blank">loot-drop.io</a></li>
-
-<li>🛠️ <strong>OUTILS • Textarea</strong><br>
-→ Éditeur texte léger et rapide<br>
-🔗 <a href="https://textarea.my/#VY9NTgMxDIX3PcVjA" target="_blank">textarea.my</a></li>
-
-<li>🛠️ <strong>OUTILS • Untype</strong><br>
-→ Créer/éditer contenu sans code<br>
-🔗 <a href="https://untype.app/" target="_blank">untype.app</a></li>
-
-<li>🛠️ <strong>OUTILS • Futurepedia</strong><br>
-→ Répertoire outils IA<br>
-🔗 <a href="https://future-pedia.com/fr/" target="_blank">future-pedia.com</a></li>
-
-<li>🛠️ <strong>OUTILS • Neocities</strong><br>
-→ Hébergement sites web<br>
-🔗 <a href="https://neocities.org/" target="_blank">neocities.org</a></li>
-
-<li>📊 <strong>OUTILS • Mempool.space</strong><br>
-→ Explorateur Bitcoin<br>
+<!-- Section Éducation & Culture -->
+<h2>🌐 Éducation & Culture</h2>
+<ul>
+<li>🌐 Korben → Blog tech, hacking, open source et sécurité<br>
+🔗 <a href="https://korben.info/" target="_blank">korben.info</a></li>
+<li>🗺️ BTC Map → Carte mondiale commerces acceptant Bitcoin<br>
+🔗 <a href="https://btcmap.org/map" target="_blank">btcmap.org/map</a></li>
+<li>🎵 Lasagna Beats → Beats & loops pour production musicale<br>
+🔗 <a href="https://beats.lasagna.pizza/" target="_blank">beats.lasagna.pizza</a></li>
+<li>🎵 Strudel → Exploration et manipulation audio<br>
+🔗 <a href="https://strudel.cc/#JDogcygiW2JkIDxoaCBvaD5dKjIiKS5iYW5rKCJ0cjkwOSIpLmRlYyguNCk%3D" target="_blank">strudel.cc</a></li>
+<li>🎵 LoopMaster → Création et édition boucles audio<br>
+🔗 <a href="https://loopmaster.xyz/" target="_blank">loopmaster.xyz</a></li>
+<li>🎬 WikiFlix → Streaming films domaine public<br>
+🔗 <a href="https://wikiflix.toolforge.org/#/" target="_blank">wikiflix.toolforge.org</a></li>
+<li>🛠️ MathAcademy Cyan → Plateforme mathématiques interactive<br>
+🔗 <a href="https://mathacademy-cyan.vercel.app/" target="_blank">mathacademy-cyan.vercel.app</a></li>
+<li>🌌 APOD → Image astronomique quotidienne NASA<br>
+🔗 <a href="https://apod.nasa.gov/apod/astropix.html" target="_blank">apod.nasa.gov</a></li>
+<li>🌐 Politiscales → Analyse politique interactive<br>
+🔗 <a href="https://politiscales.fr/" target="_blank">politiscales.fr</a></li>
+<li>🌐 TerraGuessr → Globe 3D inégalités mondiales<br>
+🔗 <a href="https://terraguessr.org/" target="_blank">terraguessr.org</a></li>
+<li>📊 Mempool.space → Explorateur Bitcoin<br>
 🔗 <a href="https://mempool.space/fr/" target="_blank">mempool.space</a></li>
+<li>📊 Timechain Calendar → Données réseau & halving<br>
+🔗 <a href="https://timechaincalendar.com" target="_blank">timechaincalendar.com</a></li>
+<li>📊 Clark Moody Dashboard → Vue globale Bitcoin<br>
+🔗 <a href="https://dashboard.clarkmoody.com" target="_blank">dashboard.clarkmoody.com</a></li>
+<li>📊 Wicked Smart Bitcoin → Visualisations avancées Bitcoin<br>
+🔗 <a href="https://wickedsmartbitcoin.com" target="_blank">wickedsmartbitcoin.com</a></li>
+<li>📊 bitbo.io → Dashboard Bitcoin Mining & réseau<br>
+🔗 <a href="https://bitbo.io" target="_blank">bitbo.io</a></li>
+<li>🛠️ Be-BOP → Monétisation éthique, billetterie et paiements<br>
+🔗 <a href="https://be-bop.io/home" target="_blank">be-bop.io/home</a></li>
+<li>📚 Transmission de la liberté → Livres éducatifs Bitcoin & liberté<br>
+🔗 <a href="https://linktr.ee/scuba_wizard" target="_blank">linktr.ee/scuba_wizard</a></li>
+</ul>
 
-<li>💰 <strong>BOUTIQUES BITCOIN • B Market 21</strong><br>
-→ Boutique en ligne Bitcoin-friendly<br>
+<!-- Section Boutiques Bitcoin & Services -->
+<h2>💰 Boutiques Bitcoin & Services</h2>
+<ul>
+<li>💰 B Market 21 → Boutique en ligne Bitcoin-friendly<br>
 🔗 <a href="https://bmarket21.com/" target="_blank">bmarket21.com</a></li>
-
-<li>💰 <strong>BOUTIQUES BITCOIN • Sulina Derm</strong><br>
-→ Soins naturels, paiement Bitcoin<br>
+<li>💰 Sulina Derm → Soins naturels paiement Bitcoin<br>
 🔗 <a href="https://sulinaderm.com/" target="_blank">sulinaderm.com</a></li>
-
-<li>💰 <strong>BOUTIQUES BITCOIN • Drink Bob</strong><br>
-→ Boissons et accessoires Bitcoin<br>
+<li>💰 Drink Bob → Boissons & accessoires Bitcoin<br>
 🔗 <a href="https://drink-bob.com/" target="_blank">drink-bob.com</a></li>
-
-<li>💰 <strong>BOUTIQUES BITCOIN • BitcoinStore</strong><br>
-→ Matériel, livres, accessoires Bitcoin<br>
+<li>💰 BitcoinStore → Matériel, livres, accessoires Bitcoin<br>
 🔗 <a href="https://bitcoinstore.fr/" target="_blank">bitcoinstore.fr</a></li>
-
-<li>💰 <strong>BOUTIQUES BITCOIN • BitcoinBook</strong><br>
-→ Boutique en ligne Bitcoin<br>
+<li>💰 BitcoinBook → Boutique en ligne Bitcoin<br>
 🔗 <a href="https://bitcoinbook.shop/collections/french" target="_blank">bitcoinbook.shop</a></li>
-
-<li>💰 <strong>BOUTIQUES BITCOIN • Bitcoin Bazar</strong><br>
-→ Boutique physique et en ligne Bitcoin<br>
+<li>💰 Bitcoin Bazar → Boutique physique & en ligne<br>
 🔗 <a href="https://bitcoinbazar.fr/" target="_blank">bitcoinbazar.fr</a></li>
+</ul>
+
+<!-- Section Réseaux décentralisés & Répertoires -->
+<h2>🌐 Réseaux décentralisés & Répertoires</h2>
+<ul>
+<li>🌍 Club Orange → Réseau social Bitcoiners<br>
+🔗 <a href="https://signup.cluborange.org/co/famas" target="_blank">signup.cluborange.org</a></li>
+<li>🌐 Nostr → Protocole ouvert décentralisé<br>
+🔗 <a href="https://nostr.fr/" target="_blank">nostr.fr</a></li>
+<li>🌐 NostrZap → Interface Nostr<br>
+🔗 <a href="https://www.nostrzap.com/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">nostrzap.com</a></li>
+<li>🌐 ProfileStr → Gestion identité Nostr<br>
+🔗 <a href="https://profilestr.com/profile/npub1yh2aytq422srfl54ul3qs7q2n0atx4fdfw95zdzfvznyz2njhckqg6l33l" target="_blank">profilestr.com</a></li>
+<li>🌐 Flare → Agrégateur Nostr, Mastodon, Bluesky<br>
+🔗 <a href="https://flareapp.moe/" target="_blank">flareapp.moe</a></li>
+<li>📚 BTC Directory → Annuaire Bitcoin FR & internat<br>
+🔗 <a href="https://btcdir.org/" target="_blank">btcdir.org</a></li>
+<li>📚 Bitzy → Annuaire Bitcoin & crypto<br>
+🔗 <a href="https://www.bitzy.com/" target="_blank">bitzy.com</a></li>
+<li>📚 KYCnot.me → Services crypto sans KYC<br>
+🔗 <a href="https://kycnot.me/" target="_blank">kycnot.me</a></li>
+<li>🛠️ Loot Drop → Projets abandonnés, inspiration<br>
+🔗 <a href="https://www.loot-drop.io/" target="_blank">loot-drop.io</a></li>
+<li>🛠️ Textarea → Éditeur texte léger, rapide<br>
+🔗 <a href="https://textarea.my/#VY9NTgMxDIX3PcVjA" target="_blank">textarea.my</a></li>
+<li>🛠️ Untype → Création & édition contenu sans code<br>
+🔗 <a href="https://untype.app/" target="_blank">untype.app</a></li>
+<li>🛠️ Futurepedia → Répertoire outils IA<br>
+🔗 <a href="https://future-pedia.com/fr/" target="_blank">future-pedia.com</a></li>
+<li>🛠️ QrCode Draw (Swtch) → Générateur QR codes<br>
+🔗 <a href="https://research.swtch.com/qr/draw/" target="_blank">research.swtch.com/qr/draw/</a></li>
+<li>🛠️ itoa.hex.dance → Convertisseur nombres<br>
+🔗 <a href="https://itoa.hex.dance/" target="_blank">itoa.hex.dance</a></li>
+<li>🛠️ Neocities → Hébergement sites web<br>
+🔗 <a href="https://neocities.org/" target="_blank">neocities.org</a></li>
+<li>🛠️ json2map → Visualisation JSON<br>
+🔗 <a href="https://www.json2map.com/" target="_blank">json2map.com</a></li>
+<li>🛠️ OmniTools → Utilitaires web<br>
+🔗 <a href="https://omnitools.app/" target="_blank">omnitools.app</a></li>
+<li>🛠️ Awesome AI for Science → Répertoire IA scientifique<br>
+🔗 <a href="https://zdoc.app/en/ai-boost/awesome-ai-for-science" target="_blank">zdoc.app</a></li>
+<li>🛠️ Tibillet → Billetterie coopérative open source<br>
+🔗 <a href="https://tibillet.org/fr/" target="_blank">tibillet.org</a></li>
+<li>🛠️ Aesty Covers → Génération visuels de couverture<br>
+🔗 <a href="https://covers.aesty.ai/" target="_blank">covers.aesty.ai</a></li>
+<li>📱 iOS App → Application utilitaires variés<br>
+🔗 <a href="https://apps.apple.com/app/id1049254261" target="_blank">apps.apple.com</a></li>
 </ul>
 
 </div>
